force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ActionsResulting__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ActionsResulting__c</fullName>
    <label>Actions Resulting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>