force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ActivitySchedule__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ActivitySchedule__c</fullName>
    <description>When activity is to occur</description>
    <label>Activity Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>