force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__Code__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Code__c</fullName>
    <description>Code Symbol in syntax defined by the system</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>