force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__DailyAmount__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DailyAmount__c</fullName>
    <label>Daily Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>