force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ProductMedication255__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProductMedication255__c</fullName>
    <label>Product Medication 255</label>
    <length>255</length>
    <type>Text</type>
</CustomField>