force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__ProductSubstance__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProductSubstance__c</fullName>
    <label>Product Substance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>