force-app/main/default/objects/HealthCloudGA__EhrCarePlanActivity__c/fields/HealthCloudGA__Quantity__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>